# ksquirrel-libs

./: AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  VERSION  aclocal.m4  builddeb  compile  config.h.in~  config.status  configure  configure.ac  configure.ac~  configure.gnu  configure2  description-pak  endian.h  err.h  generate  generate~  install_all_as_root  ksquirrel-libs.spec  ksquirrellibs.pc  ksquirrellibs.pc.in  libtool  predistclean  reconfigure  required-etch  subdirs
contrib/libopenexr/: Makefile.am  Makefile.in  OpenEXR.pc  autogen.sh  configure.ac
doc/html/: Makefile  Makefile.am  Makefile.in  bits.html  development-highlev.html  index.html  ksquirrel-libs-about.html  ksquirrel-libs-fio.html  ksquirrel-libs-fio.html~  ksquirrel-libs-metainfo.html  ksquirrel-libs-olibs.html  ksquirrel-libs-olibs1.html  ksquirrel-libs-olibs2.html  ksquirrel-libs-olibs2.html~  ksquirrel-libs-olibs3.html  ksquirrel-libs-struct.html  simplelib.html  styles.css
kernel/: Makefile  Makefile.am  Makefile.in  defs.h  endian.h  fileio.h  fio.h  fmt_codec_base.h  fmt_defs.h  fmt_filters.cpp~  fmt_filters_ChangeLog  fmt_filters_README  generate  generate~  genfdist  kwrite  kwrite-am  link  plusx  utils.h  utils.h~
kernel/aaa/: Makefile.am  Makefile.in  dummy.cpp  fileio.Plo  fmt_utils.Plo
kernel/avs/: Makefile.am  Makefile.am~  Makefile.in  fmt_codec_avs.cpp  fmt_codec_avs.cpp~
kernel/bmp/: Makefile  Makefile.am  Makefile.am~  Makefile.in  fmt_codec_bmp.cpp  fmt_codec_bmp.cpp~  fmt_codec_bmp_defs.h  read_bmp.cpp  read_bmp.cpp~  read_bmp.h
kernel/camera/: Makefile.am  Makefile.am~  Makefile.in  dcraw.c  dcraw.h  fmt_codec_camera.cpp  fmt_codec_camera.cpp~
kernel/cut/: Makefile.am  Makefile.in  fmt_codec_cut.cpp  fmt_codec_cut.cpp~  fmt_codec_cut_defs.h
kernel/fli/: Makefile  Makefile.am  Makefile.in  fmt_codec_fli.cpp  fmt_codec_fli.cpp~  read_fli.cpp  read_fli.h  read_fli.h~
kernel/gif/: Makefile  Makefile.am  Makefile.in  fmt_codec_gif.cpp  fmt_codec_gif.cpp~  read_gif.cpp  read_gif.cpp~  read_gif.h
kernel/hdr/: Makefile.am  Makefile.am~  Makefile.in  fmt_codec_hdr.cpp  fmt_codec_hdr.cpp~
kernel/ico/: Makefile  Makefile.am  Makefile.am~  Makefile.in  fmt_codec_ico.cpp  fmt_codec_ico.cpp~  read_ico.cpp  read_ico.cpp~  read_ico.h
kernel/iff/: Makefile.am  Makefile.am~  Makefile.in  fmt_codec_iff.cpp  fmt_codec_iff.cpp~  fmt_codec_iff_defs.h  fmt_codec_iff_defs.h~
kernel/include/: fmt_codec_avs.h  fmt_codec_avs.h~  fmt_codec_bmp.h  fmt_codec_bmp.h~  fmt_codec_camera.h  fmt_codec_camera.h~  fmt_codec_cd_func.h  fmt_codec_cut.h  fmt_codec_cut.h~  fmt_codec_dds.h  fmt_codec_fli.h  fmt_codec_fli.h~  fmt_codec_gif.h  fmt_codec_gif.h~  fmt_codec_hdr.h  fmt_codec_hdr.h~  fmt_codec_ico.h  fmt_codec_ico.h~  fmt_codec_iff.h  fmt_codec_iff.h~  fmt_codec_jbig.h  fmt_codec_jpeg.h  fmt_codec_jpeg.h~  fmt_codec_jpeg2000.h  fmt_codec_jpeg2000.h~  fmt_codec_koala.h  fmt_codec_lif.h  fmt_codec_lif.h~  fmt_codec_mac.h  fmt_codec_mdl.h  fmt_codec_mdl.h~  fmt_codec_mng.h  fmt_codec_msp.h  fmt_codec_mtv.h  fmt_codec_mtv.h~  fmt_codec_openexr.h  fmt_codec_openexr.h~  fmt_codec_pcx.h  fmt_codec_pcx.h~  fmt_codec_pict.h  (+41 more)
kernel/jbig/: Makefile.am  Makefile.in  fmt_codec_jbig.cpp
kernel/jpeg/: Makefile  Makefile.am  Makefile.in  fmt_codec_jpeg.cpp  fmt_codec_jpeg.cpp~  read_jpeg.cpp  read_jpeg.cpp~  read_jpeg.c~  read_jpeg.h
kernel/jpeg2000/: Makefile.am  Makefile.am~  Makefile.in  fmt_codec_jpeg2000.cpp  fmt_codec_jpeg2000.cpp~  fmt_codec_jpeg2000_defs.h
kernel/kls_avs/: Makefile.am  Makefile.in  fmt_codec_avs.cpp  fmt_codec_avs_defs.h
kernel/kls_bmp/: Makefile.am  Makefile.in  fmt_codec_bmp.cpp
kernel/kls_camera/: Makefile.am  Makefile.in  dcraw.c  fmt_codec_camera_defs.h  fmt_codec_pnm.cpp  ksquirrel-libs-camera2ppm.in  ksquirrel-libs-dcraw  libkls_camera.so.ui
kernel/kls_cut/: Makefile.am  Makefile.in  fmt_codec_cut.cpp
kernel/kls_dds/: Makefile.am  Makefile.in  dds.cpp  dds.h  fmt_codec_dds.cpp  fmt_codec_dds_defs.h
kernel/kls_dicom/: Makefile.am  Makefile.in  ksquirrel-libs-dicom2png.in
kernel/kls_djvu/: Makefile.am  Makefile.in  fmt_codec_pnm.cpp  libkls_djvu.so.ui
kernel/kls_dxf/: Makefile.am  Makefile.in  libkls_dxf.so.ui
kernel/kls_eps/: Makefile.am  Makefile.in
kernel/kls_fig/: Makefile.am  Makefile.in  fmt_codec_pnm.cpp  ksquirrel-libs-fig2ppm.in
kernel/kls_fli/: Makefile.am  Makefile.in  fmt_codec_fli.cpp  fmt_codec_fli_defs.h
kernel/kls_gif/: Makefile.am  Makefile.in  fmt_codec_gif.cpp  fmt_codec_gif_defs.h
kernel/kls_hdr/: Makefile.am  Makefile.in  fmt_codec_hdr.cpp  fmt_codec_hdr_defs.h
kernel/kls_ico/: Makefile.am  Makefile.in  fmt_codec_ico.cpp  fmt_codec_ico_defs.h
kernel/kls_iff/: Makefile.am  Makefile.in  fmt_codec_iff.cpp  ksquirrel-libs-iff2ppm.in
kernel/kls_jbig/: Makefile.am  Makefile.in  fmt_codec_jbig.cpp  fmt_codec_jbig_defs.h  jbig2mem.cpp  jbig2mem.h
kernel/kls_jpeg/: Makefile.am  Makefile.in  fmt_codec_jpeg.cpp  fmt_codec_jpeg_defs.h
kernel/kls_jpeg2000/: Makefile.am  Makefile.in  fmt_codec_jpeg2000.cpp
kernel/kls_koala/: Makefile.am  Makefile.in  fmt_codec_koala.cpp
kernel/kls_leaf/: Makefile.am  Makefile.in  fmt_codec_pnm.cpp  ksquirrel-libs-leaf2ppm.in
kernel/kls_lib/: Makefile.am  Makefile.in
kernel/kls_lif/: Makefile.am  Makefile.in  fmt_codec_lif.cpp  fmt_codec_lif_defs.h
kernel/kls_ljpeg/: Makefile.am  Makefile.in  fmt_codec_pnm.cpp  ksquirrel-libs-ljpeg2ppm-s.in
kernel/kls_mac/: Makefile.am  Makefile.in  fmt_codec_mac.cpp  ksquirrel-libs-mac2ppm.in
kernel/kls_mdl/: Makefile.am  Makefile.in  fmt_codec_mdl.cpp
kernel/kls_mng/: Makefile.am  Makefile.in  fmt_codec_mng.cpp  fmt_codec_mng_defs.h
kernel/kls_msp/: Makefile.am  Makefile.in  fmt_codec_msp.cpp
kernel/kls_mtv/: Makefile.am  Makefile.in  fmt_codec_mtv.cpp  fmt_codec_mtv_defs.h
kernel/kls_neo/: Makefile.am  Makefile.in  ksquirrel-libs-neo2ppm.in
kernel/kls_openexr/: Makefile.am  Makefile.in  fmt_codec_openexr.cpp  fmt_codec_openexr_defs.h
kernel/kls_pcx/: Makefile.am  Makefile.in  fmt_codec_pcx.cpp
(+756 files in other folders)
